compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_float.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 35
expression: "case <<1>> { <<a:float>> if a > 1 -> 1 _ -> 2 }"
snapshot_kind: text
---
----- SOURCE CODE
case <<1>> { <<a:float>> if a > 1 -> 1 _ -> 2 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:29
  │
1 │ case <<1>> { <<a:float>> if a > 1 -> 1 _ -> 2 }
  │                             ^

Expected type:

    Int

Found type:

    Float
